samples/_failures_safe/1761353103_4b6ff8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b95f6790.c: In function ‘tokenize_operator’:
./samples/SAFE/__tmp_b95f6790.c:158:21: error: expected ‘;’ at end of input
  158 |         token->value
      |                     ^
      |                     ;
./samples/SAFE/__tmp_b95f6790.c:158:9: error: expected declaration or statement at end of input
  158 |         token->value
      |         ^~~~~
./samples/SAFE/__tmp_b95f6790.c:158:9: error: expected declaration or statement at end of input
